[project]
name = "strava-api"
version = "0.1.0"
description = "A Python client for the Strava API that provides asynchronous data fetching and management."
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Just Sala" }
]

dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9.1",
    "python-dotenv>=1.0.0",
    "typing>=3.7.4.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api_app"]